trying to fix nav bar on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,6 @@ nav a {
 	display: inline-block;
 	position: relative;
 	text-decoration: none;
-    text-align: right;
 }
 
 nav a:hover {
